// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseKeeper harvest succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131439,
}
`;

exports[`BaseKeeper harvest succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 61195,
}
`;

exports[`BaseKeeper harvest succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 133616,
}
`;

exports[`BaseKeeper harvest succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 78428,
}
`;

exports[`BaseKeeper harvest succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 63372,
}
`;
